# SongLoader

./: .gitignore  .gitmodules  Android.mk  CMakeLists.txt  LICENSE  README.md  addr2line.bat  build-libcrypto.sh  build.ps1  copy.ps1  createqmod.ps1  log.bat  log.ps1  mod.template.json  profile.ps1  pullandanalyze.ps1  qpm.json  qpm.shared.json  setenv-android.sh  songloader.code-workspace
.github/actions/canary-ndk/: action.yml
.github/workflows/: build-ndk.yml  build.yml  publish.yml
include/: ArrayUtil.hpp  CodegenIncludes.hpp  CustomBeatmapLevelLoader.hpp  CustomCharacteristics.hpp  CustomConfig.hpp  CustomLogger.hpp  ExtraData.hpp  LevelData.hpp  LoadingFixHooks.hpp  LoadingUI.hpp  ModSettingsViewController.hpp  Paths.hpp  Sprites.hpp  Utils.hpp  assets.hpp  customlogger.hpp  tasks.hpp
include/CustomTypes/: SongLoader.hpp  SongLoaderBeatmapLevelPackCollectionSO.hpp  SongLoaderCustomBeatmapLevelPack.hpp
include/Utils/: ArrayUtil.hpp  CacheUtils.hpp  FileUtils.hpp  FindComponentsUtils.hpp  HashUtils.hpp  OggVorbisUtils.hpp
shared/: API.hpp  PathHandling.hpp  SongData.hpp  SongLoader.hpp  _config.h  loader.hpp  song-data.hpp  utils.hpp
shared/CustomTypes/: CustomLevelInfoSaveData.hpp  SongLoaderBeatmapLevelPackCollectionSO.hpp  SongLoaderBeatmapLevelsRepository.hpp  SongLoaderCustomBeatmapLevelPack.hpp
src/: API.cpp  CustomBeatmapLevelLoader.cpp  CustomCharacteristics.cpp  CustomSongLoader.cpp  LevelData.cpp  LoadingFixHooks.cpp  LoadingUI.cpp  Main.cpp  ModSettingsViewController.cpp  PathHandling.cpp  SongData.cpp  SongLoader.cpp  SongLoader_bkp.cpp  path-handling.cpp  song-data.cpp
src/CustomTypes/: CustomLevelInfoSaveData.cpp  SongLoader.cpp  SongLoaderBeatmapLevelPackCollectionSO.cpp  SongLoaderBeatmapLevelsRepository.cpp  SongLoaderCustomBeatmapLevelPack.cpp
src/Utils/: CacheUtils.cpp  FileUtils.cpp  FindComponentsUtils.cpp  HashUtils.cpp  OggVorbisUtils.cpp
